# Arbitrary-Precision-Rational-Number-Library

./: .gitignore  CMakeLists.txt  README.md
include/: BigInteger.h  BigRational.h
src/: BigInteger.cpp  BigRational.cpp
tests/: test.cpp
